--- a/config.env
+++ b/config.env
@@ -1,15 +1,12 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # RECOMMNED SETUP 
 ## Setup only Required Config & DATABASE_URL
 ## Rest of variable can be setup using BOT by /bsetting command
 
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "7092299196:AAFDrftAM2ZuQCXg6fmXZGgSTHZSJ2QJCGA"
+OWNER_ID = "1790775725"
+TELEGRAM_API = "24482734"
+TELEGRAM_HASH = "5ccf6a58166cc047a7eba01c5dbc930c"
 
 # OPTIONAL CONFIG
 GDRIVE_ID = ""
@@ -17,7 +14,7 @@ DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "20"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1" 
-DATABASE_URL = ""
+DATABASE_URL = "mongodb+srv://bharathkalladi38:4TDnaR1dZqAEshQq@cluster0.ps5ucul.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 AUTHORIZED_CHATS = ""
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
